# Rust_Embedded_MAX31865

./: .gdbinit  Cargo.toml  README.md  openocd.gdb
.cargo/: config
src/: main.rs
